{
    "name": "IA",
    "maps": [
        {
            "name": "General",
            "id": "d3d30ed8-90bc-4eea-8e8a-20b1e5336adf",
            "actions": [
                {
                    "name": "Red",
                    "type": "Button",
                    "id": "8651fa8c-e01e-426f-a472-822f7963eadb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Blue",
                    "type": "Button",
                    "id": "07e7e3c9-4640-477d-b5a7-2682bce6591f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Green",
                    "type": "Button",
                    "id": "07938e4d-8988-4258-aa9c-c7fc4a2c0771",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Squat",
                    "type": "Button",
                    "id": "53219466-eb7d-455e-8d9c-e0981c4655cc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d9a7d046-8787-46e6-8b6e-cd307d14831d",
                    "path": "<XInputController>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Red",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8d20ab7d-feda-46c8-919d-ca948d9f00bd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Red",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "12d87d55-9d9b-4e9a-9343-1b88af6f8fa3",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Red",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a9c0a18a-b268-4af7-8255-21264647a179",
                    "path": "<Keyboard>/z",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Red",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "009f8289-c8cb-47af-88db-b30aa5f4a0ae",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Green",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ab4d3c1-2409-4e16-a573-94222c22a39d",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Green",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6fac6419-04da-48fe-9d12-3bb82d6be268",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Green",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "93cf2fbe-b2cc-4754-9f3e-4d7faeab23e1",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Green",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "56207e79-bd84-4cab-bfc2-e86f3b032580",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Squat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bfe9d368-5a4d-40a0-a94e-6e89cf88355c",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Squat",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4eec5e6a-d2e4-4919-a775-e3d8724e093e",
                    "path": "<XInputController>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eef02176-45e2-463e-ae08-9685b625428e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c9c2c0af-273b-483a-80b2-65414b0bdcaf",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b5914199-915d-4a86-b711-b6e25862a17a",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Blue",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Debug",
            "id": "fad2b750-cfad-45e5-9d91-d88ed10ac23c",
            "actions": [
                {
                    "name": "ShowTips",
                    "type": "Button",
                    "id": "182e7183-2056-4a04-9a39-6eef2ba90d46",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ChangeResolution",
                    "type": "Button",
                    "id": "6a4f30bd-8732-449f-ba76-6567033a12b4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToTitle",
                    "type": "Button",
                    "id": "966e0c48-5e94-4ccb-bcf2-c2d0d44cdb9c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=2)",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "Two Modifiers",
                    "id": "68c80d7e-aa9c-4479-82e8-77c0ef92d985",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowTips",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "117d10fe-f08f-417a-be29-2f2790d6b97b",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowTips",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "d80147c4-e2e0-429e-bf60-e509442d0299",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowTips",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "811b03c3-71a3-4032-819b-3697b9fdf4f1",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ShowTips",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Two Modifiers",
                    "id": "1b126d16-d5d0-4c7e-a41f-01a340d94e75",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeResolution",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "93522cfe-a530-4b6e-a80f-5b97bcd2a9a2",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeResolution",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "16da44e9-2300-4b23-8b8c-01e52502f8bf",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeResolution",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "7c0da348-4a56-4510-aa34-ce29e796d7f8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeResolution",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Two Modifiers",
                    "id": "f7885e47-84cf-4ca3-a77a-e78306f7d44e",
                    "path": "TwoModifiers",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToTitle",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier1",
                    "id": "937879ef-b875-46dd-9771-aa19334d1722",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToTitle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "modifier2",
                    "id": "5135d994-0a8a-4c42-810c-d48b7aad08be",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToTitle",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "c552a550-e262-4bd1-afd1-f88e5086e99a",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ToTitle",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}